banking-demo/k8s/account-deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: account-svc
  labels:
    app.kubernetes.io/component: account
    app.kubernetes.io/name: banking-demo
spec:
  selector:
    app.kubernetes.io/component: account
    app.kubernetes.io/name: banking-demo
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: account-vs
  labels:
    app.kubernetes.io/component: account
    app.kubernetes.io/name: banking-demo
spec:
  hosts:
    - "*"
  gateways:
    - banking-demo-gw
  http:
    - match:
        - uri:
            prefix: /account
      route:
        - destination:
            port:
              number: 80
            host: account-svc
            
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-deploy
  labels:
    app.kubernetes.io/component: account
    app.kubernetes.io/name: banking-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: account
      app.kubernetes.io/name: banking-demo
  template:
    metadata:
      labels:
        opa-istio-authz: "true"
        app.kubernetes.io/component: account
        app.kubernetes.io/name: banking-demo
        
    spec:
      serviceAccountName: account-sa
      hostPID: false
      hostIPC: false
      hostNetwork: false
      containers:
        - name: account
          image: adamsandor83/account:latest
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - all
          ports:
            - containerPort: 8080
          livenessProbe:
             httpGet:
               path: /actuator/health
               scheme: HTTP
               port: 8080
             initialDelaySeconds: 45
             periodSeconds: 5
          readinessProbe:
             httpGet:
               path: /actuator/health
               scheme: HTTP
               port: 8080
             initialDelaySeconds: 15
             periodSeconds: 5
          resources:
           limits:
             cpu: 1
             memory: 512Mi
           requests:
             cpu: 100m
             memory: 256Mi
