banking-demo/k8s/accountholder-deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: accountholder-svc
  labels:
    app.kubernetes.io/component: accountholder
    app.kubernetes.io/name: banking-demo
spec:
  selector:
    app.kubernetes.io/component: accountholder
    app.kubernetes.io/name: banking-demo
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: accountholder-vs
  labels:
    app.kubernetes.io/component: accountholder
    app.kubernetes.io/name: banking-demo
spec:
  hosts:
    - "*"
  gateways:
    - banking-demo-gw
  http:
    - match:
        - uri:
            prefix: /accountholder
      route:
        - destination:
            port:
              number: 80
            host: accountholder-svc
            
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accountholder-deploy
  labels:
    app.kubernetes.io/component: accountholder
    app.kubernetes.io/name: banking-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: accountholder
      app.kubernetes.io/name: banking-demo
  template:
    metadata:
      labels:
        opa-istio-authz: "true"
        app.kubernetes.io/component: accountholder
        app.kubernetes.io/name: banking-demo
        
    spec:
      serviceAccountName: accountholder-sa
      hostPID: false
      hostIPC: false
      hostNetwork: false
      containers:
        - name: accountholder
          image: adamsandor83/accountholder:latest
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - all
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              scheme: HTTP
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 5
          readinessProbe:
             httpGet:
               path: /health
               scheme: HTTP
               port: 8080
             initialDelaySeconds: 5
             periodSeconds: 5
          resources:
            limits:
              cpu: 1
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 100Mi
      volumes:
        - name: opa-config-vol
          configMap:
            name: opa-istio-config
