banking-demo/k8s/entitlements-deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: entitlements-svc
  labels:
    app.kubernetes.io/component: entitlements
    app.kubernetes.io/name: banking-demo
spec:
  selector:
    app.kubernetes.io/component: entitlements
    app.kubernetes.io/name: banking-demo
  ports:
    - name: http
      port: 80
      targetPort: 8081
  type: ClusterIP

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: entitlements-vs
  labels:
    app.kubernetes.io/component: entitlements
    app.kubernetes.io/name: banking-demo
spec:
  hosts:
    - "*"
  gateways:
    - banking-demo-gw
  http:
    - match:
        - uri:
            prefix: /entitlements
      route:
        - destination:
            port:
              number: 80
            host: entitlements-svc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entitlements-deploy
  labels:
    app.kubernetes.io/component: entitlements
    app.kubernetes.io/name: banking-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: entitlements
      app.kubernetes.io/name: banking-demo
  template:
    metadata:
      labels:
        opa-istio-authz: "false"
        app.kubernetes.io/component: entitlements
        app.kubernetes.io/name: banking-demo
    spec:
      serviceAccountName: entitlements-sa
      containers:
        - name: entitlements
          image: adamsandor83/entitlements-nopa:latest
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - all
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /actuator/health
              scheme: HTTP
              port: 8081
            initialDelaySeconds: 45
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health
              scheme: HTTP
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 5
          resources:
            limits:
              cpu: 1
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
