banking-demo/k8s/portal-deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: portal-svc
  labels:
    app.kubernetes.io/component: portal
    app.kubernetes.io/name: banking-demo
spec:
  selector:
    app.kubernetes.io/component: portal
    app.kubernetes.io/name: banking-demo
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: portal-vs
  labels:
    app.kubernetes.io/component: portal
    app.kubernetes.io/name: banking-demo
spec:
  hosts:
    - "*"
  gateways:
    - banking-demo-gw
  http:
    - match:
        - uri:
            prefix: /portal
      route:
        - destination:
            port:
              number: 80
            host: portal-svc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-deploy
  labels:
    app.kubernetes.io/component: portal
    app.kubernetes.io/name: banking-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: portal
      app.kubernetes.io/name: banking-demo
  template:
    metadata:
      labels:
        opa-istio-authz: "true"
        app.kubernetes.io/component: portal
        app.kubernetes.io/name: banking-demo
        
    spec:
      serviceAccountName: portal-sa
      containers:
        - name: portal
          image: adamsandor83/portal:latest
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false  # do not change
            runAsNonRoot: true
            runAsUser: 101
            runAsGroup: 101
            capabilities:
              drop:
                - all
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
